gcc-14.2.0/gcc/testsuite/gdc.test/compilable/issue24018.d
version https://git-lfs.github.com/spec/v1
oid sha256:45502f5ce12873a4ab4d5d0c6ec4ce7c5f4a67c29cdf1f7227f7b531653d64ae
size 77
